--- a/res/layout/local_browser.xml
+++ b/res/layout/local_browser.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
+    android:layout_height="match_parent"
+    android:background="@color/black" >
+
     <TextView
         android:id="@+id/browserTitle"
         android:layout_width="wrap_content"
@@ -14,40 +15,42 @@
         android:paddingTop="10dp"
         android:text="@string/label_file_browser"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white"
         android:textStyle="bold" />
 
     <ListView
         android:id="@+id/browserList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_below="@+id/browserTitle"
         android:layout_above="@+id/buttonArea"
-        android:background="@drawable/group_background"
+        android:layout_below="@+id/browserTitle"
+        android:divider="@color/white"
+        android:dividerHeight="1px"
+        android:footerDividersEnabled="true"
         android:orientation="vertical" >
     </ListView>
 
     <LinearLayout
         android:id="@+id/buttonArea"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center" 
-        style="?android:attr/buttonBarStyle" >
+        android:gravity="center" >
 
         <Button
             android:id="@+id/browserOpenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_open"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="@string/label_open" />
 
         <Button
             android:id="@+id/browserDeleteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_delete"
-            android:layout_weight="1" />
-</LinearLayout>
+            android:layout_weight="1"
+            android:text="@string/label_delete" />
+    </LinearLayout>
+
 </RelativeLayout>
