--- a/res/layout/wifi_cam_main.xml
+++ b/res/layout/wifi_cam_main.xml
@@ -20,7 +20,7 @@
         <RadioGroup
             android:id="@+id/tabs_rg"
             android:layout_width="match_parent"
-            android:layout_height="45sp"
+            android:layout_height="60sp"
             android:gravity="center"
             android:background="@color/black"
             android:orientation="horizontal" >
@@ -30,9 +30,9 @@
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                android:layout_marginLeft="20sp"
-				android:layout_marginRight="25sp"
-                android:background="@drawable/ic_launcher"
+                android:layout_marginLeft="10sp"
+				android:layout_marginRight="10sp"
+                android:background="@drawable/currvideo_on"
                 android:button="@null"
                 android:checked="true"
                 android:gravity="center"
@@ -43,9 +43,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                android:layout_marginRight="25sp"
-                android:layout_marginLeft="25sp"
-                 android:background="@drawable/ic_launcher"
+                android:layout_marginRight="10sp"
+                android:layout_marginLeft="10sp"
+                 android:background="@drawable/sd_off"
                 android:button="@null"
                 android:gravity="center"
                 android:singleLine="true" />
@@ -55,9 +55,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                android:layout_marginRight="25sp"
-                android:layout_marginLeft="25sp"
-                 android:background="@drawable/ic_launcher"
+                android:layout_marginRight="10sp"
+                android:layout_marginLeft="10sp"
+                 android:background="@drawable/loc_off"
                 android:button="@null"
                 android:gravity="center"
                 android:singleLine="true" />
@@ -67,9 +67,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                android:layout_marginLeft="25sp"
-                android:layout_marginRight="20sp"
-                android:background="@drawable/ic_launcher"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
+                android:background="@drawable/sett_off"
                 android:button="@null"
                 android:gravity="center"
                 android:singleLine="true" />
