--- a/res/layout/browser.xml
+++ b/res/layout/browser.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/black" >
 
     <TextView
         android:id="@+id/browserTitle"
@@ -12,6 +13,7 @@
         android:layout_margin="10dp"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
+        android:textColor="@color/white"
         android:text="@string/label_file_browser"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
@@ -20,11 +22,12 @@
         android:id="@+id/browserList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_below="@+id/browserTitle"
         android:layout_above="@+id/buttonArea"
-        android:background="@drawable/group_background"
+        android:layout_gravity="center"
+        android:divider="@color/white"
+        android:dividerHeight="1px"
+        android:footerDividersEnabled="true"
         android:orientation="vertical" >
     </ListView>
 
