--- a/res/layout/local_filelist_row.xml
+++ b/res/layout/local_filelist_row.xml
@@ -41,7 +41,8 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:text="This is File Name"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,7 +59,8 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:text="This is Date-Time"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/fileListSize"
@@ -72,7 +74,8 @@
                 android:gravity="right"
                 android:singleLine="true"
                 android:text="1024.99M"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/white" />
         </LinearLayout>
     </LinearLayout>
 
