--- a/res/layout/browser.xml
+++ b/res/layout/browser.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black" >
+    android:background="@color/black" 
+    tools:context="${relativePackage}.${activityClass}">
 
     <TextView
         android:id="@+id/browserTitle"
@@ -13,17 +15,17 @@
         android:layout_margin="10dp"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:textColor="@color/white"
         android:text="@string/label_file_browser"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white"
         android:textStyle="bold" />
 
     <ListView
         android:id="@+id/browserList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/browserTitle"
+        android:layout_height="200sp"
         android:layout_above="@+id/buttonArea"
+        android:layout_below="@+id/browserTitle"
         android:layout_gravity="center"
         android:divider="@color/white"
         android:dividerHeight="1px"
@@ -31,33 +33,36 @@
         android:orientation="vertical" >
     </ListView>
 
+  
+
     <LinearLayout
         android:id="@+id/buttonArea"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:gravity="center" 
-        style="?android:attr/buttonBarStyle" >
+        android:gravity="center" >
 
         <Button
             android:id="@+id/browserDownloadButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_save"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="@string/label_save" />
 
         <Button
             android:id="@+id/browserDeleteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_delete"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="@string/label_delete" />
+
         <Button
             android:id="@+id/browserOpenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_open"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="@string/label_open" />
     </LinearLayout>
 
 </RelativeLayout>
