--- a/res/layout/local_browser.xml
+++ b/res/layout/local_browser.xml
@@ -4,65 +4,19 @@
     android:layout_height="match_parent"
     android:background="@color/black" >
 
-    <TextView
-        android:id="@+id/browserTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:text="@string/label_file_browser"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/white"
-        android:textStyle="bold" />
-
-   <!--  <ListView
-        android:id="@+id/browserList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonArea"
-        android:layout_below="@+id/browserTitle"
-        android:divider="@color/white"
-        android:dividerHeight="1px"
-        android:footerDividersEnabled="true"
-        android:orientation="vertical" >
-    </ListView> -->
+    <include
+        android:id="@+id/frag_header"
+        layout="@layout/header" />
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@id/browserList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonArea"
-        android:layout_below="@+id/browserTitle"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/frag_header"
         android:divider="@color/white"
         android:dividerHeight="1px"
         android:footerDividersEnabled="true"
         android:orientation="vertical" >
     </com.baoyz.swipemenulistview.SwipeMenuListView>
-
-    <LinearLayout
-        android:id="@+id/buttonArea"
-        style="?android:attr/buttonBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center" >
-
-        <Button
-            android:id="@+id/browserOpenButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/label_open" />
-
-        <Button
-            android:id="@+id/browserDeleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/label_delete" />
-    </LinearLayout>
 
 </RelativeLayout>
