--- a/res/layout/wifi_cam_main.xml
+++ b/res/layout/wifi_cam_main.xml
@@ -3,35 +3,34 @@
     android:id="@+id/contactListRoot"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/black"
     android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical" >
-
-        
-        <FrameLayout
+ <FrameLayout
             android:id="@+id/tab_content"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1.0" />
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/header_line" />
+
         <RadioGroup
             android:id="@+id/tabs_rg"
             android:layout_width="match_parent"
             android:layout_height="60sp"
-            android:gravity="center"
             android:background="@color/black"
+            android:gravity="center"
             android:orientation="horizontal" >
 
             <RadioButton
                 android:id="@+id/tab_rb_a"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
                 android:layout_weight="1.0"
-                android:layout_marginLeft="10sp"
-				android:layout_marginRight="10sp"
                 android:background="@drawable/currvideo_on"
                 android:button="@null"
                 android:checked="true"
@@ -42,10 +41,10 @@
                 android:id="@+id/tab_rb_b"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
                 android:layout_weight="1.0"
-                android:layout_marginRight="10sp"
-                android:layout_marginLeft="10sp"
-                 android:background="@drawable/sd_off"
+                android:background="@drawable/sd_off"
                 android:button="@null"
                 android:gravity="center"
                 android:singleLine="true" />
@@ -54,10 +53,10 @@
                 android:id="@+id/tab_rb_c"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
                 android:layout_weight="1.0"
-                android:layout_marginRight="10sp"
-                android:layout_marginLeft="10sp"
-                 android:background="@drawable/loc_off"
+                android:background="@drawable/loc_off"
                 android:button="@null"
                 android:gravity="center"
                 android:singleLine="true" />
@@ -66,14 +65,12 @@
                 android:id="@+id/tab_rb_d"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
                 android:layout_weight="1.0"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
                 android:background="@drawable/sett_off"
                 android:button="@null"
                 android:gravity="center"
                 android:singleLine="true" />
         </RadioGroup>
-    </LinearLayout>
-
 </LinearLayout>
