--- a/res/drawable/group_background.xml
+++ b/res/drawable/group_background.xml
@@ -2,14 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#D0D0D0" />
+    <solid android:color="#282828" />
 
     <margin
         android:bottom="5dp"
         android:left="5dp"
         android:right="5dp"
         android:top="5dp" />
-
-    <corners android:radius="20dp" />
 
 </shape>
