--- a/res/layout/local_filelist_row.xml
+++ b/res/layout/local_filelist_row.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/black" >
 
     <ImageView
         android:id="@+id/fileListThumbnail"
@@ -22,7 +23,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
-        android:checkMark="?android:attr/listChoiceIndicatorMultiple" />
+        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
