--- a/res/layout/network_configurations.xml
+++ b/res/layout/network_configurations.xml
@@ -1,89 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="match_parent"
+    android:background="@color/black"
+    android:orientation="vertical" >
+
+    <include
+        android:id="@+id/frag_header"
+        layout="@layout/header" />
+
+    <LinearLayout
+        android:id="@+id/llSettSSID"
+        android:layout_width="match_parent"
+        android:layout_height="60sp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30sp"
+        android:background="@drawable/group_background"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="80sp"
+            android:layout_height="40sp"
+            android:layout_gravity="center"
+            android:gravity="center|left"
+            android:text="@string/label_wifi_ssid"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/cameraControlWifiName"
+            android:layout_width="match_parent"
+            android:layout_height="40sp"
+            android:layout_gravity="center"
+            android:hint="@string/label_wifi_ssid"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llSettKeyWord"
+        android:layout_width="match_parent"
+        android:layout_height="60sp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30sp"
+        android:background="@drawable/group_background"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="80sp"
+            android:layout_height="40sp"
+            android:layout_gravity="center"
+            android:gravity="center|left"
+            android:text="@string/label_encryption_key"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/cameraControlWifiEncryptionKey"
+            android:layout_width="match_parent"
+            android:layout_height="40sp"
+            android:layout_gravity="center"
+            android:background="@drawable/group_background"
+            android:hint="@string/label_encryption_key"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:layout_height="60sp"
+        android:layout_marginTop="20sp"
+        android:gravity="center" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:text="@string/label_network_configurations"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/group_background"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/cameraControlWifiNameTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@string/label_wifi_ssid"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <EditText
-                android:id="@+id/cameraControlWifiName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:ems="10"
-                android:inputType="textNoSuggestions"
-                android:singleLine="true" >
-            </EditText>
-
-            <TextView
-                android:id="@+id/cameraControlWifiEncryptionKeyTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@string/label_encryption_key"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <EditText
-                android:id="@+id/cameraControlWifiEncryptionKey"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:ems="10"
-                android:inputType="textVisiblePassword"
-                android:singleLine="true" >
-            </EditText>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="center" >
-
-                <Button
-                    android:id="@+id/cameraControlUpdateButton"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/label_update"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/cameraControlResetButton"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/label_re_activate_network"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
+        <Button
+            android:id="@+id/cameraControlResetButton"
+            android:layout_width="160sp"
+            android:layout_height="match_parent"
+            android:background="@color/red"
+            android:textSize="25sp"
+            android:text="@string/label_re_activate_network"
+            android:textColor="@color/white" />
     </LinearLayout>
-</ScrollView>
+
+</LinearLayout>
