--- a/res/layout/preview_player.xml
+++ b/res/layout/preview_player.xml
@@ -6,9 +6,14 @@
     android:baselineAligned="false"
     android:orientation="vertical" >
 
+    <include
+        android:id="@+id/frag_header"
+        layout="@layout/header" />
+
     <LinearLayout
+        android:layout_marginTop="10sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1" >
 
         <FrameLayout
@@ -20,41 +25,39 @@
             <SurfaceView
                 android:id="@+id/player_surface"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center" />
 
             <TextView
                 android:id="@+id/TimeStampLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dip"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#ffff00" />
+                android:textColor="@color/red" />
 
             <ImageView
                 android:id="@+id/iv_pause"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_pause"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom|right"
+                android:src="@drawable/ic_pause_normal"
                 android:visibility="invisible" />
         </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/cameraSnapshotButton"
-            android:layout_width="140sp"
-            android:layout_height="140sp"
+            android:layout_width="150sp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="10sp"
             android:src="@drawable/takphoto" />
 
         <ImageView
@@ -65,10 +68,9 @@
 
         <ImageView
             android:id="@+id/cameraRecordButton"
-            android:layout_width="140sp"
-            android:layout_height="140sp"
+            android:layout_width="150sp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="10sp"
             android:src="@drawable/record" />
     </LinearLayout>
 
