--- a/res/drawable/background_mod.xml
+++ b/res/drawable/background_mod.xml
@@ -2,12 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#666666" />
+    <solid android:color="#CD2626" />
 
     <margin
         android:bottom="5dp"
         android:left="5dp"
         android:right="5dp"
         android:top="5dp" />
+
+    <corners android:radius="20dp" />
 
 </shape>
