--- a/res/layout/camera_settings.xml
+++ b/res/layout/camera_settings.xml
@@ -18,15 +18,14 @@
         android:orientation="horizontal" >
 
         <TextView
+            style="@style/fontStyle"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center|left"
-            android:paddingLeft="10sp"
-            android:text="@string/label_video_resolution"
-            android:textSize="20sp"
-            android:textColor="@color/white" />
+            android:paddingLeft="20sp"
+            android:text="@string/label_video_resolution" />
 
         <LinearLayout
             android:layout_width="0sp"
@@ -39,7 +38,7 @@
             <TextView
                 android:id="@+id/tv_high"
                 android:layout_width="70sp"
-                android:layout_height="40sp"
+                android:layout_height="30sp"
                 android:layout_gravity="center"
                 android:background="@color/green"
                 android:gravity="center"
@@ -50,7 +49,7 @@
             <TextView
                 android:id="@+id/tv_mindle"
                 android:layout_width="70sp"
-                android:layout_height="40sp"
+                android:layout_height="30sp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="1sp"
                 android:background="@color/light_white"
@@ -62,7 +61,7 @@
             <TextView
                 android:id="@+id/tv_low"
                 android:layout_width="70sp"
-                android:layout_height="40sp"
+                android:layout_height="30sp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="1sp"
                 android:background="@color/light_white"
@@ -83,14 +82,14 @@
         android:weightSum="10" >
 
         <TextView
+            style="@style/fontStyle"
             android:layout_width="match_parent"
             android:layout_height="60sp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="7"
             android:gravity="center|left"
-            android:text="@string/label_motion_detection"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:paddingLeft="20sp"
+            android:text="@string/label_motion_detection" />
 
         <ImageView
             android:id="@+id/ivSettMotDet"
@@ -114,14 +113,14 @@
         android:weightSum="10" >
 
         <TextView
+            style="@style/fontStyle"
             android:layout_width="match_parent"
             android:layout_height="60sp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="7"
             android:gravity="center|left"
-            android:text="@string/label_record_voice"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:paddingLeft="20sp"
+            android:text="@string/label_record_voice" />
 
         <ImageView
             android:id="@+id/ivCamSettVoic"
@@ -133,6 +132,37 @@
             android:contentDescription="@string/label_motion_detection"
             android:gravity="center"
             android:src="@drawable/off_switch" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20sp"
+        android:background="@drawable/group_background"
+        android:orientation="horizontal"
+        android:weightSum="10" >
+
+        <TextView
+            style="@style/fontStyle"
+            android:layout_width="match_parent"
+            android:layout_height="60sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="7"
+            android:gravity="center|left"
+            android:paddingLeft="20sp"
+            android:text="@string/label_formart_cam" />
+
+        <ImageView
+            android:id="@+id/ivFormatCamSD"
+            android:layout_width="100sp"
+            android:layout_height="30sp"
+            android:layout_gravity="center"
+            android:layout_weight="3"
+            android:clickable="true"
+            android:contentDescription="@string/label_motion_detection"
+            android:gravity="center"
+            android:src="@drawable/right_in" />
     </LinearLayout>
 
 </LinearLayout>
